--- a/bb.bib
+++ b/bb.bib
@@ -1,3 +1,14 @@
+@book{bcl04,
+    author       = {Bengtsson, Tommy and Campbell, Cameron and Lee,
+James Z.},
+   isbn         = {{978-0-262-02551-5}},
+   publisher    = {{MIT Press}},
+   title        = {{Life under Pressure: Mortality and Living Standards
+in Europe and Asia, 1700--1900}},
+   year         = {{2004}},
+}
+
+
 @misc{sedd,
 author = {Bengtsson, T. and Dribe,  M. and Quaranta, L. and Svensson, P.},
 year = {2014},
