--- a/paper2.Rmd
+++ b/paper2.Rmd
@@ -35,7 +35,7 @@ header-includes:
 - \usepackage[figuresonly]{endfloat}
 - \renewcommand{\efloatseparator}{\mbox{}}
 ##- \subsectionfont{\normalfont\normalfont\itshape}
-abstract: "A variation of the Bourgeois-Pichat biometric analysis of infant mortality is suggested. In the original model, cumulative mortality in the last eleven months of infancy is assumed to follow a uniform distribution given a log-cube transformation of age. Instead, we assume an exponential distribution. The difference is that while the denominator is constant in the Bourgeois-Pichat model, equal to the number of births, in our model, the denominator is the current population at risk. We argue that our assumption is more satisfactory from a theoretical point of view, since it focus on the conditional probability of dying. Our model gives different estimates of endogenous and exogenous mortality and, in addition, the model ﬁt is slightly better, especially in cases with higher levels of infant mortality."
+abstract: "A variation of the Bourgeois-Pichat biometric analysis of infant mortality is suggested. In the original model, cumulative mortality in the last eleven months of infancy is assumed to follow a uniform distribution given a log-cube transformation of age. Instead, we assume an exponential distribution. The difference is that while the denominator is constant in the Bourgeois-Pichat model, equal to the number of births, in our model, the denominator is the current population at risk. We argue that our assumption is more satisfactory from a theoretical point of view, since it focus on the conditional probability of dying. Our model gives different estimates of endogenous and exogenous mortality and, in addition, the model ﬁt is slightly better, especially in cases with higher levels of infant mortality. We use data from northern and southern Sweden for the period 1710 to 1950 to compare the two methods."
 ---
 
 ```{r setup, include=FALSE}
@@ -66,16 +66,16 @@ abline(v = 28, h = g(28), col = "darkgreen", lty = 3)
 ```
 
 Lois Bourgeois-Pichat saw the first year of life not only as the period when mortality is highest, but also the period when improvements should be possible 
-[@bp51a; @bp51b; @bp52]. He argued that infant deaths should be divided into two categories, endogenous and exogenous deaths. Endogenous deaths are, by definition, due to inherited factors, or acquired during gestation or delivery. They typically occur at the initial period of life, though sometimes much later and include congenital debility, prematurity, malformations, and disease in early life. Exogenous infant mortality, which Bourgeois-Pichat regards as accidental, are deaths for which the society must hold itself responsible and to reduce endogenous mortality, medical intervention is essential [@bp52]. Since it is, based on causes of deaths, difficult to distinguish between endogenous and exogenous factors, either because they are inaccurate or difficult to make due to the diseases themself, or the information do not exist, Bourgeois-Pichat offered a solution to the problem.
+[@bp51a; @bp51b; @bp52]. He argued that infant deaths should be divided into two categories, endogenous and exogenous deaths. Endogenous deaths are, by definition, due to inherited factors, or acquired during gestation or delivery. They typically occur at the initial period of life, though sometimes much later and include congenital debility, prematurity, malformations, and disease in early life. Exogenous infant mortality, which Bourgeois-Pichat regards as accidental, are deaths for which the society must hold itself responsible and to reduce endogenous mortality, medical intervention is essential [@bp52]. Since it is, based on causes of deaths, difficult to distinguish between endogenous and exogenous factors, either because they are inaccurate or difficult to make due to the diseases themselves, or the information do not exist, Bourgeois-Pichat offered a solution to the problem.
 
 Bourgeois-Pichat’s biometric model to differentiate between endogenous and exogenous mortality is based on an idea of a universal law governing the
 distribution of deaths in the first year of life [@bp52]. He assumes that all deaths taking place in the last eleven months of the first year are exogenous. He argues that, although there are also some endogenous mortalities during this period, they do not affect the development of mortality much. Supported by examples from mid-twentieth century Western and Southern Europe, the US and Canada, New Zeeland, and other countries, Bourgeois-Pichat argued that the cumulative infant deaths after the first month follows a linear development given a log-cube transformation of age [@bp52]. Mortality in the first month of life is then divided into an endogenous and an exogenous assuming that the same linearity also exists in this period. It leads to the conclusion that exogenous deaths in the first month of life represent 25 percent of the deaths from the second to twelfth months [@bp52].
 
-Applying this method, Bourgeois-Pichat also finds deviations from the linear death pattern after the first month. To take one example, the curve for Sardinia in 1948 bend strongly upward after four months [@bp52, Figure 12]. To take another example, in the case of Quebec 1944--1947, the curve bends down quite strongly after the sixth month [@bp52, Figure 8]. A downward bend is also what has been found using historical Swedish parish data [@tb99, Figure 6b; @tbcl99, Figures 6 and 7; @lyn98, Figures 1 and 2; @jslgt81, Figure 6d], though less pronounced than in Quebec. @knoki77 argues that breastfeeding patterns have a strong impact on the linearity. The curve for Sweden 1910--1946 show, however, no such downward bend [@bp51b, Figure 9; @bp52].
+Bourgeois-Pichat also found deviations from the linear death pattern after the first month, the curve for Sardinia in 1948 bend strongly upward after four months [@bp52, Figure 12], and in the case of Quebec 1944--1947, the curve bends down quite strongly after the sixth month [@bp52, Figure 8]. A downward bend is also what has been found using historical Swedish parish data [@tb99, Figure 6b; @tbcl99, Figures 6 and 7; @lyn98, Figures 1 and 2; @jslgt81, Figure 6d], though less pronounced than in Quebec. @knoki77 argues that breastfeeding patterns have a strong impact on the linearity, resulting in increasing mortality after weaning. The curve for Sweden 1910--1946 show, however, no such downward bend [@bp51b, Figure 9; @bp52].
 
-Bourgeois-Pichat's biometric method has also been used to identify problems with data recording [@wea77; @weasr81]. While a high level of endogenous mortality cannot be used as a criterion for high data quality, the opposite holds true. A very low level of endogenous mortality indeed indicates data problems, just like large deviations from the normal sex ratio at birth do. These two criteria are, in fact, often used in historical studies to evaluate data recording (see Bengtsson et al 2004). They become even more precise if they are applied to different social strata, since under-recording of early deaths often have a social gradient, possibly due to the costs involved in a burial [@tb99; @tbcl99].
+Bourgeois-Pichat's biometric method has also been used to identify problems with data recording [@wea77; @weasr81]. While a high level of endogenous mortality cannot be used as a criterion for high data quality, the opposite holds true. A very low level of endogenous mortality indeed indicates data problems, just like large deviations from the normal sex ratio at birth do. These two criteria are, in fact, often used in historical studies to evaluate data quality [@bcl04]. They become even more precise if they are applied to different social strata, since under-recording of early deaths often have a social gradient, possibly due to the costs involved in a burial [@tb99; @tbcl99].
 
-We suggest a variation of the Bourgeois-Pichat biometric analysis of infant mortality. Instead of assuming that the cumulative mortality in the last eleven months of infancy follows a uniform distribution, given a log-cube transformation of age, we assume an exponential distribution. The difference is that while the denominator is constant in the Bourgeois-Pichat model, equal to the number of births, in our model, the denominator is the current population at risk. This assumption is more satisfactory from a theoretical point of view, since it models the conditional probability of dying. The growth in birth weight also follows this distribution [@bp51a; @bp51b]. In addition, the model ﬁt is slightly better for our model, especially in cases with high level of infant mortality, common in pre-modern societies. The advantage is that not only is our assumption more attractive from a theoretical point of view, and therefore easier to interpret, but also that it is makes it easier to estimate exogenous and endogenous infant mortality with standard survival analysis programs.1 In addition, we give examples from eighteenth Sweden, where the curve do not follow the uniform distribution during the last eleven month of infancy, despite high levels of mortality in the first month of life.
+We suggest a variation of the Bourgeois-Pichat biometric analysis of infant mortality. Instead of assuming that the cumulative mortality in the last eleven months of infancy follows a uniform distribution, given a log-cube transformation of age, we assume an exponential distribution. The difference is that while the denominator is constant in the Bourgeois-Pichat model, equal to the number of births, in our model, the denominator is the current population at risk. This assumption is more satisfactory from a theoretical point of view, since it models the conditional probability of dying. The growth in birth weight also follows this distribution [@bp51a; @bp51b]. In addition, the model ﬁt is slightly better for our model, especially in cases with high level of infant mortality, common in pre-modern societies. The advantage is that not only is our assumption more attractive from a theoretical point of view, and therefore easier to interpret, but also that it is makes it easier to estimate exogenous and endogenous infant mortality with standard survival analysis programs.1 In addition, we give examples from eighteenth Sweden, where the curve is concave during the last eleven month of infancy, despite high levels of mortality in the first month of life.
 
 # The Bourgeois-Pichat procedure
 
@@ -101,11 +101,12 @@ and due to imperfect time measuring there may be tied death ages. As an illustra
 we use a data set from northern Sweden, covering the years 1861--1950.
 ```{r readdata}
 infant <- readRDS("Rdata/infant.rds")
+infant$month <- months(infant$birthdate)
 infant$period <- cut(infant$birthdate, 
                    breaks = as.Date(c("1860-12-31", "1890-12-31", 
                                       "1920-12-31", "1951-01-01")),
                    labels = c("1861-1890", "1891-1920", "1921-1950"))
-infant <- infant[, c("birthdate", "sex", "enter", "exit", "event", "period", "icd.chapter")]
+infant <- infant[, c("birthdate", "sex", "enter", "exit", "event", "period", "month")]
 ginfant <- infant
 ginfant$enter <- g(infant$enter)
 ginfant$exit <- g(infant$exit)
@@ -114,6 +115,8 @@ For the first and last 30 years in this data set, we have the results shown in F
 
 ```{r first, fig.cap = "The periods 1861--1890 and 1921--1950 in Västerbotten, Bourgeois-Pichat method."}
 source("R/drawBP.R")
+##infant <- infant[infant$month %in% c("juni", "juli", "augusti"), ]
+##ginfant <- ginfant[ginfant$month %in% c("juni", "juli",  "augusti"), ]
 oldpar <- par(mfrow = c(1,2))
 ##
 r1 <- with(ginfant[ginfant$period == "1861-1890", ], eha::Surv(enter, exit, event))
