--- a/paper2.Rmd
+++ b/paper2.Rmd
@@ -400,6 +400,106 @@ n <- length(yen)
 axis(4, at = c(0, 1000 * rate * g(x[n]), yen[n], y[n]), las = 1, cex.axis = 0.7)
 ```
 
+## The assumptions about exogenous mortality
+
+*Exogenous* causes of death are due to social, cultural, economic, and environmental 
+factors, and also accidents. An argument for the constant hazards and the uniform approaches to
+exogenous infant mortality is that, after compensating for age via the log-cube transformation, 
+these factors are random and evenly spread in time, like *white noise*. However,  this disregards 
+seasonal variations in weather, and following that the spread of infectious diseases.
+
+To illustrate this, data will be split in two ways, first by "birth month" (cohort data) and second by
+"calendar month" (period data).
+
+### Cohorts by birth season
+
+```{r datain}
+library(eha)
+Sys.setlocale("LC_ALL", "en_US.utf8")
+g <- function(x) (log(x+1))^3 * 365 / (log(366))^3
+infa <- readRDS("Rdata/infant.rds")[, c("id", "sex", "birthdate", "enter", "exit", "event")]
+infa$exit <- infa$exit / 365 ## NOTE!!
+infa$bmonth <- months(infa$birthdate, abbreviate=TRUE)
+infa$bmonth <- factor(infa$bmonth, levels = month.abb)
+winter <- with(infa, bmonth %in% c("Dec", "Jan", "Feb"))
+spring <- with(infa, bmonth %in% c("Mar", "Apr", "May"))
+summer <- with(infa, bmonth %in% c("Jun", "Jul", "Aug"))
+fall <- with(infa, bmonth %in% c("Sep", "Oct", "Nov"))
+infa$bseason <- ""
+infa$bseason[winter] <- "winter"
+infa$bseason[summer] <- "summer"
+infa$bseason[fall] <- "fall"
+infa$bseason[spring] <- "spring"
+infa$bseason <- factor(infa$bseason, levels = c("spring", "summer", "fall", "winter"))
+infa$bdate <- toTime(infa$birthdate)
+##infa$bdate <- (infa$bdate - floor(infa$bdate)) * 365
+cuts <- seq(0, 1, by = 1 / 12)
+comm <- data.frame(month = rep(month.abb, 100))
+dat <- make.communal(infa, comm, start = 1861, period = 1 / 12,
+                     surv = c("enter", "exit", "event", "bdate"))
+dat$month <- factor(dat$month, levels = month.abb)
+winter <- with(dat, month %in% c("Dec", "Jan", "Feb"))
+spring <- with(dat, month %in% c("Mar", "Apr", "May"))
+summer <- with(dat, month %in% c("Jun", "Jul", "Aug"))
+fall <- with(dat, month %in% c("Sep", "Oct", "Nov"))
+dat$season <- ""
+dat$season[winter] <- "winter"
+dat$season[spring] <- "spring"
+dat$season[summer] <- "summer"
+dat$season[fall] <- "fall"
+dat$season <- factor(dat$season, levels = c("spring", "summer", "fall", "winter")) 
+dat$enter <- 365 * dat$enter # NOTE!
+dat$exit <- 365 * dat$exit # NOTE!
+```
+
+```{r plotcohort, fig.cap = "By birth month, cohorts.", fig.height = 9, eval = FALSE}
+oldpar <- par(mfrow = c(4, 3))
+for (mon in levels(dat$bmonth)){
+    drawBB2(dat[dat$bmonth == mon, ], main = mon, printLegend = FALSE)
+}
+par(oldpar)
+```
+
+```{r plotcohort2, fig.cap = "By birth season, cohorts.", fig.height = 8}
+oldpar <- par(mfrow = c(2, 2))
+for (seas in levels(dat$bseason)){
+    drawBB2(dat[dat$bseason == seas, ], main = seas, printLegend = FALSE)
+}
+par(oldpar)
+```
+
+We see that the post-neonatal part of the total cumulative hazards are more or
+less convex (bend upward at the end) for those born in spring or summer, while 
+the curves are concave for births in the fall or winter. Bad fits to "constant hazard"
+and "uniform distribution".
+
+### Periods by season
+
+```{r plotperiod, fig.cap = "By calendar month, periods.", fig.height = 9, eval = FALSE}
+oldpar <- par(mfrow = c(4, 3))
+for (mon in levels(dat$bmonth)){
+    drawBB2(dat[dat$month == mon, ], main = mon, printLegend = FALSE)
+}
+par(oldpar)
+```
+
+```{r plotperiod2, fig.cap = "By calendar season, periods.", fig.height = 8}
+oldpar <- par(mfrow = c(2, 2))
+for (seas in levels(dat$season)){
+    drawBB2(dat[dat$season == seas, ], main = seas, printLegend = FALSE)
+}
+par(oldpar)
+```
+The periods are of course more homogeneous regarding weather and external threats,
+and it shows off in that in all four periods the suggested models fit well, here shown by the
+"constant hazards model" for exogenous mortality.
+
+### Conclusion
+
+The assumptions about constant hazard and uniform distribution of exogenous mortality 
+are only applicable on population level, it can never hold for an individual. It can 
+be thought of as an average over birth cohorts, where   
+
 # Biometric analysis in practice
 
 The original procedure of Bourgeos-Pichat is compared to the hazard based procedure for some typical
@@ -520,7 +620,7 @@ It is an interesting case because it appears as if the data quality is low since
 the linearity during the post-neonatal period is gone. Rather, there is a "hockey-stick" pattern, 
 also seen in other old data sets. See Figure \@ref(fig:scahigh).
 
-However, this data set is known to be of very high quality [@belu99], so we are inclined to 
+However, this data set is known to be of very high quality [@tbcl99], so we are inclined to 
 think that the biometric model as it is described here simply is inappropriate during the eighteenth century.
 
 ```{r scahigh, fig.cap = "Scania 1710--1800."}
