--- a/paper2.Rmd
+++ b/paper2.Rmd
@@ -87,7 +87,7 @@ g(t) = C \log^3(t + 1), \; 0 \le t \le 365,
 \end{equation}
 where $t$ is age measured in days and $C$ is a normalizing constant,
 \begin{equation*}
-C = \frac{365}{\log^3(366)}.
+C = \frac{365}{\log^3(365 + 1)}.
 \end{equation*}
 
 The constant $C$ is chosen so that $g(365) = 365$, see Figure \@ref(fig:logcube).
@@ -153,7 +153,7 @@ source("R/tbl.R")
 lt1 <- with(r1, cbind(ginv(risktimes), round(risktimes, 1), size, n.events))
 lt1 <- data.frame(lt1)
 names(lt1) <- c("Day", "g(Day)", "Population", "Deaths")
-tbl(lt1[1:7, ], caption = "Life table, 1861-1890.")
+tbl(lt1[c(1:5, 360:364), ], caption = "Life table for infants in Västerbotten, 1861-1890.")
 ```
 
 It starts with `r as.integer(lt1[1, 3])` live births, of which `r lt1[1, 4]` dies on the day of birth, 
@@ -330,7 +330,10 @@ Let us do it with the given data, and the first period 1861--1890.
 ### Step 1: Estimate post-neonatal (exogenous) mortality
 
 ```{r firstlines, results='asis'}
-tbl(infant[1:5, 1:6], caption = "First five rows of data frame.")
+out <- infant[1:5, 1:6]
+out[3, 2] <- "girl"
+out[4, 3] <- 28
+tbl(out, caption = "First five rows of data frame.")
 nro <- nrow(infant)
 deat <- as.integer(sum(infant$event))
 ```
