error corrections and new bibitem

--- a/bb.bib
+++ b/bb.bib
@@ -1,3 +1,15 @@
+@book{rp72,
+  title={Demographic Analysis; Methods, Results, Applications},
+  author={Pressat, R. and Matras, J. and Keyfitz, N.},
+  isbn={9780202300931},
+  lccn={69011228},
+  url={https://books.google.se/books?id=fT\_ZAAAAIAAJ},
+  year={1972},
+  publisher={Aldine-Atherton},
+  address = {New York}
+}
+
+
 @book{bcl04,
     author       = {Bengtsson, Tommy and Campbell, Cameron and Lee,
 James Z.},
