--- a/paper2.Rmd
+++ b/paper2.Rmd
@@ -52,30 +52,19 @@ dg <- function(x) 3 * (log(1 + x))^2 / (1 + x) * 365 / (log(366))^3
 
 # Introduction
 
-```{r logcube, fig.cap = "The log-cube transform of time in days versus the identity transform (dashed). Note that g(365) = 365.", fig.height = 7}
-x <- seq(0, 365, length = 366)
-plot(x, g(x), type = "l", xlab = "Days", ylab = "g(Days)", 
-     col = "blue", axes = FALSE)
-att <- c(0, 28, 183, 365)
-axis(1, at = att, labels = att)
-axis(2, las = 1, at = g(att), labels = c("0", "g(28)", "g(183)", "365"))
-box()
-lines(c(0, 365), c(0, 365), lty = 2)
-abline(v = c(0, 365), h = c(0, 365))
-abline(v = 28, h = g(28), col = "darkgreen", lty = 3)
-```
 
-Lois Bourgeois-Pichat saw the first year of life not only as the period when mortality is highest, but also the period when improvements should be possible 
+Jean Bourgeois-Pichat saw the first year of life not only as the period when mortality is highest, but also the period when improvements should be possible 
 [@bp51a; @bp51b; @bp52]. He argued that infant deaths should be divided into two categories, endogenous and exogenous deaths. Endogenous deaths are, by definition, due to inherited factors, or acquired during gestation or delivery. They typically occur at the initial period of life, though sometimes much later and include congenital debility, prematurity, malformations, and disease in early life. Exogenous infant mortality, which Bourgeois-Pichat regards as accidental, are deaths for which the society must hold itself responsible and to reduce endogenous mortality, medical intervention is essential [@bp52]. Since it is, based on causes of deaths, difficult to distinguish between endogenous and exogenous factors, either because they are inaccurate or difficult to make due to the diseases themselves, or the information do not exist, Bourgeois-Pichat offered a solution to the problem.
 
 Bourgeois-Pichat’s biometric model to differentiate between endogenous and exogenous mortality is based on an idea of a universal law governing the
-distribution of deaths in the first year of life [@bp52]. He assumes that all deaths taking place in the last eleven months of the first year are exogenous. He argues that, although there are also some endogenous mortalities during this period, they do not affect the development of mortality much. Supported by examples from mid-twentieth century Western and Southern Europe, the US and Canada, New Zeeland, and other countries, Bourgeois-Pichat argued that the cumulative infant deaths after the first month follows a linear development given a log-cube transformation of age [@bp52]. Mortality in the first month of life is then divided into an endogenous and an exogenous assuming that the same linearity also exists in this period. It leads to the conclusion that exogenous deaths in the first month of life represent 25 percent of the deaths from the second to twelfth months [@bp52].
+distribution of deaths in the first year of life [@bp52]. He assumes that all deaths taking place in the last eleven months of the first year are exogenous. He argues that, although there are also some endogenous mortalities during this period, they do not affect the development of mortality much. Supported by examples from mid-twentieth century Western and Southern Europe, the US and Canada, New Zeeland, and other countries, Bourgeois-Pichat argued that the cumulative infant deaths after the first month follows a linear development given a log-cube transformation of age [@bp52]. Mortality in the first month of life is then divided into an endogenous and an exogenous assuming that the same linearity also exists in this period. It leads to the conclusion that exogenous deaths in the first 28 days of life represent 22.8 percent of the deaths from the 29th to the 365th day [@bp52; @rp72], or 18.6 percent of the
+total number of exogenous infant deaths.
 
-Bourgeois-Pichat also found deviations from the linear death pattern after the first month, the curve for Sardinia in 1948 bend strongly upward after four months [@bp52, Figure 12], and in the case of Quebec 1944--1947, the curve bends down quite strongly after the sixth month [@bp52, Figure 8]. A downward bend is also what has been found using historical Swedish parish data [@tb99, Figure 6b; @tbcl99, Figures 6 and 7; @lyn98, Figures 1 and 2; @jslgt81, Figure 6d], though less pronounced than in Quebec. @knoki77 argues that breastfeeding patterns have a strong impact on the linearity, resulting in increasing mortality after weaning. The curve for Sweden 1910--1946 show, however, no such downward bend [@bp51b, Figure 9; @bp52].
+Bourgeois-Pichat also found deviations from the linear death pattern after the first month, the curve for Sardinia in 1948 bend strongly upward after four months [@bp52, Figure 12]. @knoki77 give ample examples of upward bending curves and argue that they are due to increasing mortality after stopping breast feeding. In Quebec 1944--1947, the curve bends down quite strongly after the sixth month [@bp52, Figure 8]. A downward bend is also what has been found using historical Swedish parish data [@tb99, Figure 6b; @tbcl99, Figures 6 and 7; @lyn98, Figures 1 and 2; @jslgt81, Figure 6d], though less pronounced than in Quebec. The curve for Sweden 1910--1946 show, however, no such downward bend [@bp51b, Figure 9; @bp52].
 
 Bourgeois-Pichat's biometric method has also been used to identify problems with data recording [@wea77; @weasr81]. While a high level of endogenous mortality cannot be used as a criterion for high data quality, the opposite holds true. A very low level of endogenous mortality indeed indicates data problems, just like large deviations from the normal sex ratio at birth do. These two criteria are, in fact, often used in historical studies to evaluate data quality [@bcl04]. They become even more precise if they are applied to different social strata, since under-recording of early deaths often have a social gradient, possibly due to the costs involved in a burial [@tb99; @tbcl99].
 
-We suggest a variation of the Bourgeois-Pichat biometric analysis of infant mortality. Instead of assuming that the cumulative mortality in the last eleven months of infancy follows a uniform distribution, given a log-cube transformation of age, we assume an exponential distribution. The difference is that while the denominator is constant in the Bourgeois-Pichat model, equal to the number of births, in our model, the denominator is the current population at risk. This assumption is more satisfactory from a theoretical point of view, since it models the conditional probability of dying. The growth in birth weight also follows this distribution [@bp51a; @bp51b]. In addition, the model ﬁt is slightly better for our model, especially in cases with high level of infant mortality, common in pre-modern societies. The advantage is that not only is our assumption more attractive from a theoretical point of view, and therefore easier to interpret, but also that it is makes it easier to estimate exogenous and endogenous infant mortality with standard survival analysis programs.1 In addition, we give examples from eighteenth Sweden, where the curve is concave during the last eleven month of infancy, despite high levels of mortality in the first month of life.
+We suggest a variation of the Bourgeois-Pichat biometric analysis of infant mortality. Instead of assuming that the cumulative mortality in the last eleven months of infancy follows a uniform distribution, given a log-cube transformation of age, we assume an exponential distribution. The difference is that while the denominator is constant in the Bourgeois-Pichat model, equal to the number of births, in our model, the denominator is the current population at risk. This assumption is more satisfactory from a theoretical point of view, since it models the conditional probability of dying. The growth in birth weight also follows this distribution [@bp51a; @bp51b]. In addition, the model ﬁt is slightly better for our model, especially in cases with high level of infant mortality, common in pre-modern societies. The advantage is that not only is our assumption more attractive from a theoretical point of view, and therefore easier to interpret, but also that it is makes it easier to estimate exogenous and endogenous infant mortality with standard survival analysis programs. We give examples of the two methods using data for 19th and 10th century norhern Sweden, where both mehods fit very well. In addition, we give examples from eighteenth Sweden, where the curve is concave during the last eleven month of infancy, despite high levels of mortality in the first month of life.
 
 # The Bourgeois-Pichat procedure
 
@@ -89,6 +78,20 @@ where $t$ is age measured in days and $C$ is a normalizing constant,
 \begin{equation*}
 C = \frac{365}{\log^3(365 + 1)}.
 \end{equation*}
+
+```{r logcube, fig.cap = "The log-cube transform of time in days versus the identity transform (dashed). Note that g(365) = 365.", fig.height = 7}
+x <- seq(0, 365, length = 366)
+plot(x, g(x), type = "l", xlab = "Days", ylab = "g(Days)", 
+     col = "blue", axes = FALSE)
+att <- c(0, 28, 183, 365)
+axis(1, at = att, labels = att)
+axis(2, las = 1, at = g(att), labels = c("0", "g(28)", "g(183)", "365"))
+box()
+lines(c(0, 365), c(0, 365), lty = 2)
+abline(v = c(0, 365), h = c(0, 365))
+abline(v = 28, h = g(28), col = "darkgreen", lty = 3)
+```
+
 
 The constant $C$ is chosen so that $g(365) = 365$, see Figure \@ref(fig:logcube).
 Note that $C$ is *not* part of the original definition of the log-cube transform,
@@ -167,7 +170,7 @@ oldpar <- par(mfrow = c(1,2))
 ##
 ##r1 <- with(ginfant[ginfant$period == "1861-1890", ], eha::Surv(enter, exit, event))
 ##r1 <- eha::risksets(r1, members = FALSE)
-drawBB2(g1, main = "1861-1890")
+drawBB2(g1, main = "1861-1890", ylim = c(0, 0.11))
 ##
 ##r2 <- with(ginfant[ginfant$period == "1891-1920", ], eha::Surv(enter, exit, event))
 ##r2 <- eha::risksets(r2, members = FALSE)
@@ -175,7 +178,7 @@ drawBB2(g1, main = "1861-1890")
 ##
 ##r3 <- with(ginfant[ginfant$period == "1921-1950", ], eha::Surv(enter, exit, event))
 ##r3 <- eha::risksets(r3, members = FALSE)
-drawBB2(g3, main = "1921-1950")
+drawBB2(g3, main = "1921-1950", ylim = c(0, 0.11))
 par(oldpar)
 ```
 
@@ -323,15 +326,40 @@ $\hat{A}(t)$ to get $\hat{E}(t)$.
 Note that subtraction and addition of competing risks are okay on the hazards scale, 
 but not with probabilities, which is yet another argument in favor of the hazards approach. 
 
-Let us do it with the given data, and the first period 1861--1890.
+Let us do it with the given data (Table 3), and the full period 1861--1950.
 
 ### Step 1: Estimate post-neonatal (exogenous) mortality
 
-```{r firstlines, results='asis'}
-out <- infant[1:5, 1:6]
+\begin{table}
+
+\caption{First and last five rows of data frame.}
+\centering
+\fontsize{11}{13}\selectfont
+\begin{tabular}[t]{llrrrl}
+\toprule
+\textbf{birthdate} & \textbf{sex} & \textbf{enter} & \textbf{exit} & \textbf{event} & \textbf{period}\\
+\midrule
+1861-01-01 & girl & 0 & 163 & 1 & 1861-1890\\
+1861-01-01 & boy & 0 & 365 & 0 & 1861-1890\\
+1861-01-01 & girl & 0 & 365 & 0 & 1861-1890\\
+1861-01-01 & boy & 28 & 365 & 0 & 1861-1890\\
+1861-01-01 & boy & 0 & 57 & 1 & 1861-1890\\
+\addlinespace
+1950-12-31 & girl & 0 & 365 & 0 &  1921-1950\\
+1950-12-31 & girl & 0 & 365 & 0 & 1921-1950\\
+1950-12-31 & boy & 0 & 365 & 0 & 1921-1950\\
+1950-12-31 & girl & 0 & 365 & 0 & 1921-1950\\
+1950-12-31 & girl & 0 & 309 & 0 & 1921-1950\\
+\bottomrule
+\end{tabular}
+\end{table}
+
+```{r firstlines}
+n3 <- NROW(infant)
+out <- infant[c(1:5, (n3-4):n3), 1:6]
 out[3, 2] <- "girl"
 out[4, 3] <- 28
-tbl(out, caption = "First five rows of data frame.")
+##tbl(out, caption = "First and last five rows of data frame.")
 nro <- nrow(infant)
 deat <- as.integer(sum(infant$event))
 ```
@@ -385,20 +413,20 @@ Next, take the difference between "Total" and "Exogenous", as in Equation \@ref(
 the result is shown in Figure \@ref(fig:enof).
 
 ```{r enof, fig.cap = "Cumulative hazard functions for neonatal mortality, Västerbotten.", fig.width = 7}
-yen <- y - 1000 * rate * x
+yen <- y - 1000 * rate * x ##"Endo"
 par(las = 1)
 plot(x, yen, type = "s", col = "red", xlab = "Day", ylab = "by 1000", ylim = c(0, 36), axes = FALSE)
 axis(2, las = 1)
 axis(1, at = c(g(0), g(7), g(14), g(21), g(28)), labels = c(0, 7, 14, 21, 28))
 box()
 abline(h = 0, v = 0)
-lines(x, 1000 * rate * g(x), col = "blue", lty = 3)
+lines(x, 1000 * rate * x, col = "blue", lty = 3)
 lines(x, y, lty = 1, type = "s")
 text(8, 20, "Total", cex = 0.8)
 text(15, 14, "Endogenous", col = "red")
 text(8, 5, "Exogenous", col = "blue", cex = 0.8)
 n <- length(yen)
-axis(4, at = c(0, 1000 * rate * g(x[n]), yen[n], y[n]), las = 1, cex.axis = 0.7)
+axis(4, at = c(0, 1000 * rate * x[n], yen[n], y[n]), las = 1, cex.axis = 0.7)
 ```
 
 ## The assumptions about exogenous mortality
@@ -504,7 +532,39 @@ no problems during the neonatal phase, but then comes the tough winter months.
 
 ### Periods by month
 
-```{r plotperiod, fig.cap = "By calendar month, period data, Västerbotten 1861-1950.", fig.height = 9, eval = TRUE}
+```{r plotcohort3, fig.cap = "By month, period data, Västerbotten 1861-1950.", fig.height = 8, eval = TRUE}
+oldpar <- par(mfrow = c(1, 1))
+dato <- dat[dat$birthdate < as.Date("1950-12-31"), ]
+fit <- coxreg(Surv(g(enter), g(exit), event) ~ strata(month), data = dato)
+cols <- c("blue", "magenta", rep("red", 4), rep("green", 3), "magenta", "blue", "blue")
+haz <- hazards(fit)
+pd <- numeric(12)
+for(i in 1:12){
+    haz[[i]] <- rbind(c(0, 0), haz[[i]])
+    haz[[i]][, 2] <- cumsum(haz[[i]][, 2])
+    pd[i] <- round((1 - exp(-max(haz[[i]][, 2]))) * 100, 1)
+}
+plot(haz[[1]][, 1], haz[[1]][, 2], col = cols[1], axes = FALSE, 
+     type = "l", xlab = "Days", ylab = "Cumulative hazards")
+for (i in 2:12){
+    lines(haz[[i]][, 1], haz[[i]][, 2], col = cols[i], type = "l", lty = i)
+}
+legend("topleft", legend = paste(month.abb, pd, sep = ":  "), lty = 1:12, col = cols)
+att <- c(0, 28, 183, 365)
+axis(1, at = g(att), labels = att)
+axis(2, las = 1)
+box()
+abline(v = g(28), lty = 3)
+abline(h = 0)
+fita <- coxreg(Surv(g(enter), g(exit), event) ~ 1, data = dato)
+haza <- hazards(fita)
+lines(c(0, haza[[1]][, 1]), cumsum(c(0, haza[[1]][, 2])), type = "l", lwd = 2, col = "black")
+legend(100, 0.08, legend = "All", lty = 1, col = "black", lwd = 2)
+par(oldpar)
+```
+
+
+```{r plotperiod, fig.cap = "By calendar month, period data, Västerbotten 1861-1950.", fig.height = 9, eval = FALSE}
 oldpar <- par(mfrow = c(4, 3))
 for (mon in levels(dat$bmonth)){
     drawBB2(dat[dat$month == mon, ], main = mon, printLegend = FALSE)
@@ -520,8 +580,8 @@ for (seas in levels(dat$season)){
 par(oldpar)
 ```
 The periods are of course more homogeneous regarding weather and external threats,
-and it shows off in that in all months the suggested models fit well, here shown by the
-"constant hazards model" for exogenous mortality.
+and it shows off in that for all months the suggested models fit reasonably well, 
+although on different levels, here shown by the "constant hazards model" for exogenous mortality.
 
 ### Conclusion
 
@@ -666,12 +726,13 @@ However, the B-P method seems to have a slight upper hand regarding model fit.
 
 ## Scania 1710--1800.
 
-The Scanian dataset covers five parishes in Scania 1720--1810 [@sedd].
+The Scanian dataset covers five parishes in Scania 1710--1800 [@sedd].
 It is an interesting case because it appears as if the data quality is low since 
 the linearity during the post-neonatal period is gone. Rather, there is a "hockey-stick" pattern, 
 also seen in other old data sets. See Figure \@ref(fig:scahigh).
 
-However, this data set is known to be of very high quality [@tbcl99], so we are inclined to 
+However, this data set is known to be of very high quality [@tbcl99]. Sex ratio at birth 
+is as expected and the teonatal mortality is high for all social groups. We are therefore inclined to 
 think that the biometric model as it is described here simply is inappropriate during the eighteenth century.
 Specifically, the log-cube transformation, which fits well with 19th century data, seems
 to be completely out of order in the eighteenth century.
